[tool.poetry]
name = "qaguru-9-18"
version = "0.1.0"
description = "poetry homework"
authors = ["necros <necros83@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^8.0.0"
selene = "2.0.0rc4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
